compose/cassandra.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "cassandra"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: "cassandra"
        version: "1.0"
        release: "1"
        stage: "test"
    spec:
      containers:
        - name: "cassandra"
          image: "cassandra:3.11"
          ports:
          - containerPort: 7000
            name: intra-node
          - containerPort: 7199
            name: jmx
          - containerPort: 9042
            name: cql
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              memory: 2Gi
