compose/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "zmon-test"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: "zmon-test"
        version: "1.0"
        release: "1"
        stage: "test"
    spec:
      containers:
        - name: "zmon-controller"
          image: "pierone.stups.zalan.do/zmon/zmon-controller:test1.0"
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              memory: 2Gi
          ports:
            - containerPort: 7979
            - containerPort: 8443
