compose/eventlog.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "eventlog"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: "eventlog"
        version: "1.0"
        release: "1"
        stage: "test"
    spec:
      containers:
        - name: "eventlog"
          image: "registry.opensource.zalan.do/stups/zmon-eventlog-service:cd17"
          ports:
            - containerPort: 8081
