compose/redis.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "redis"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: "redis"
        version: "1.0"
        release: "1"
        stage: "test"
    spec:
      containers:
        - name: "redis"
          image: "registry.opensource.zalan.do/stups/redis:3.2.0-alpine"
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              memory: 2Gi
          ports:
            - containerPort: 6379
