compose/scheduler.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "scheduler"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: "scheduler"
        version: "1.0"
        release: "1"
        stage: "test"
    spec:
      containers:
        - name: "scheduler"
          image: "registry.opensource.zalan.do/stups/zmon-scheduler:v38"
          ports:
            - containerPort: 8085
            #kubectl cp resources scheduler-3081345716-bwtxl:/resources
