compose/untitled.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "controller"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: "zmon-test"
        version: "1.0"
        release: "1"
        stage: "test"
    spec:
      containers:
        - name: "zmon-controller"
          image: "registry.opensource.zalan.do/stups/zmon-controller:cd453"
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              memory: 2Gi
          ports:
            - containerPort: 7979
            - containerPort: 8443
          volumeMounts:
            - name: "zmon-controller"
              mountPath: /meta/credentials
              readOnly: true
      volumes:
      - name: "zmon-controller"
        secret:
          secretName: "zmon-test-credentials"
