compose/worker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "worker"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: "worker"
        version: "1.0"
        release: "1"
        stage: "test"
    spec:
      containers:
        - name: "worker"
          image: "registry.opensource.zalan.do/stups/zmon-worker:v130"
