compose/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    application: postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
    name: main-port
  selector:
    application: postgres
