compose/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: "zmon-test"
  name: "controller"
spec:
  selector:
    application: "zmon-test"
  type: LoadBalancer
  ports:
    - port: 8443
      protocol: TCP
      targetPort: 8443
      name: main-port
    - port: 7979
      protocol: TCP
      targetPort: 7979
      name: manage-port
