compose/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "controller"
spec:
  rules:
    # DNS name your application should be exposed on
    - host: zmon-test.stups-test.zalan.do
      http:
        paths:
          - backend:
              serviceName: "controller"
              servicePort: main-port
          - path: /metrics
            backend:
              serviceName: "controller"
              servicePort: manage-port
